--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-252.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-167.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.33MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.72MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
   - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-17.16MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-460.8KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 塞浦路斯-627.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-2.78MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.15MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-252.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-167.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
