--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
-  - {name: 🇨🇳 中国-17.16MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-460.8KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: 194.156.231.254, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 塞浦路斯-627.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.78MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.15MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.53MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇻🇳 越南-1.96MB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
+  - {name: 🇯🇵 日本-11.44MB/s(Youtube:不良林), server: 185.172.113.182, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇦 加拿大-5.47MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-649.0KB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 54f4dd9a-6a6c-4c84-b328-4a51da70793e, sni: 625tw.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-5.06MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-4.98MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
       - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.78MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
