--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.87MB/s(Youtube:不良林), server: 194.156.231.254, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 塞浦路斯-627.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇨🇳 中国-9.53MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇻🇳 越南-1.96MB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
-  - {name: 🇯🇵 日本-11.44MB/s(Youtube:不良林), server: 185.172.113.182, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇦 加拿大-5.47MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-649.0KB/s(Youtube:不良林), server: 625tw.ok365.cyou, port: 443, type: trojan, password: 54f4dd9a-6a6c-4c84-b328-4a51da70793e, sni: 625tw.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-5.06MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-4.98MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 塞浦路斯-1.17MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇨🇳 中国-8.02MB/s(Youtube:不良林), server: io.aicdn.online, port: 12011, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.87MB/s(Youtube:不良林)
-      - 塞浦路斯-627.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.44MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-649.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-5.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
