--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
-  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 塞浦路斯-1.17MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇯🇵 日本-894.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.41MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-10.87MB/s(Youtube:不良林), server: 185.172.113.182, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-17.16MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-8.02MB/s(Youtube:不良林), server: io.aicdn.online, port: 12011, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
   - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -73,10 +73,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -88,10 +88,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -104,10 +104,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
@@ -129,10 +129,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 塞浦路斯-1.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
